tests/snapshots/run_wpt_conformance__coreml_softsign_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softsign.https.any.js softsign float16 5D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: model did not produce output `softsignOutput`

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    softsignInput: f16[1, 2, 1, 3, 4];
  }

  nodes {
    [softsignOutput] = softsign(softsignInput, label="");
  }

  outputs { softsignOutput; }
}
