tests/snapshots/run_wpt_conformance__coreml_softsign_float32_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softsign.https.any.js softsign float32 5D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'softsignInput' must be of rank 4, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    softsignInput: f32[1, 2, 1, 3, 4];
  }

  nodes {
    [softsignOutput] = softsign(softsignInput, label="");
  }

  outputs { softsignOutput; }
}
