tests/snapshots/run_wpt_conformance__coreml_softsign_positive_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softsign.https.any.js softsign positive float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983334232_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([85, 62, 20, 68, 113, 72, 9, 72, 27, 72, 233, 64, 58, 57, 222, 71, 63, 66, 2, 72, 226, 67, 65, 63, 200, 64, 88, 61, 181, 72, 24, 55, 61, 69, 182, 72, 209, 71, 217, 69, 100, 72, 31, 69, 30, 71, 153, 68]);
  }

  nodes {
    [softsignOutput] = softsign(operand_0, label="");
  }

  outputs { softsignOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983334232_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
