tests/snapshots/run_wpt_conformance__coreml_sqrt_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sqrt.https.any.js sqrt float16 5D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: model did not produce output `sqrtOutput`

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    sqrtInput: f16[2, 1, 4, 1, 3];
  }

  nodes {
    [sqrtOutput] = sqrt(sqrtInput, label="");
  }

  outputs { sqrtOutput; }
}
